tests/baselines/reference/project/prologueEmit/amd/prologueEmit.errors.txt
__extends.ts(2,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== globalThisCapture.ts (0 errors) ====
    // Add a lambda to ensure global 'this' capture is triggered
    (()=>this.window);
    
==== __extends.ts (1 errors) ====
    // class inheritance to ensure __extends is emitted
    module m {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class base {}
        export class child extends base {}
    }